CXF-8457: Provide OpenTelemetry support (fix JDK-8 compilation issues)